# dde-clipboard

./: .editorconfig  .gitignore  .project  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  clipboardmodel.cpp  clipboardmodel.h  com.deepin.dde.Clipboard.service  constants.h  dde-clipboard.pro  generate_gtest_report.sh  iconbutton.cpp  iconbutton.h  itemdata.cpp  itemdata.h  itemdelegate.cpp  itemdelegate.h  itemwidget.cpp  itemwidget.h  listdelegate.cpp  listdelegate.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  pixmaplabel.cpp  pixmaplabel.h  refreshtimer.h  remove.sh
.reuse/: dep5
.tx/: config  transifex.yaml
archlinux/: PKGBUILD
dbus/: org.deepin.dde.Clipboard1.xml  org.deepin.dde.daemon.Dock1.xml
dbus/types/: dockrect.cpp  dockrect.h  screenrect.cpp  (+6 more)
dde-clipboard/: CMakeLists.txt  ClipboardLoaderInterface.cpp  clipboardmodel.cpp  clipboardmodel.h  clipboardsrc.cmake  com.deepin.dde.Clipboard.service  constants.h  dbusdock.cpp  dde-clipboard-wapper  dde-clipboard.desktop  dde-clipboard.pro  dde-lock.desktop  iconbutton.cpp  iconbutton.h  itemdata.cpp  itemdata.h  itemdelegate.cpp  itemdelegate.h  iteminfo.cpp  iteminfo.h  itemwidget.cpp  itemwidget.h  listview.cpp  listview.h  main.cpp  mainwindow.cpp  mainwindow.h  messagemanager.cpp  messagemanager.h  messagewindow.cpp  messagewindow.h  pixmaplabel.cpp  pixmaplabel.h  refreshtimer.h  resources.qrc  src.pri  tipswidget.cpp  tipswidget.h
dde-clipboard-daemon/: CMakeLists.txt  clipboarddaemon.cpp  clipboarddaemon.h  clipboardloader.cpp  clipboardloader.h  constants.h  dbus_manager.cpp  dbus_manager.h  main.cpp  readpipedatatask.cpp  readpipedatatask.h  waylandcopyclient.cpp  waylandcopyclient.h
dde-clipboard-daemon/plugin/dde-clipboard-loader/: clipboard_loader_plugin.cpp  clipboard_loader_plugin.h  clipboard_loader_plugin_global.h
dde-clipboard-daemon/plugin/dde-clipboard-loader/src/: clipboard_loader.cpp  clipboard_loader.h  iteminfo.h  wayland_copy_client.cpp  wayland_copy_client.h
dde-clipboard-daemon/plugin/dde-clipboard-manager/: clipboard_manager_plugin.cpp  clipboard_manager_plugin.h  clipboard_manager_plugin_global.h
dde-clipboard-daemon/plugin/dde-clipboard-manager/src/: wayland_copy_client.cpp  wayland_copy_client.h  waylandcopyclient.cpp  waylandcopyclient.h
dde-clipboard-daemon/serviceflow/: command.cpp  command.h  commandmessage.h  commandservice.cpp  commandservice.h  servicemanager.cpp  servicemanager.h  servicetool.cpp  servicetool.h  waylandcopyservice.cpp  waylandcopyservice.h
dde-clipboard-daemon/wlrintegration/: dwaylandmimedata.h  waylandclientextensiontemplate.h  wlrdatacontrolclipboardinterface.cpp  wlrdatacontrolclipboardinterface.h  wlrdatacontroldeviceintegration.cpp  wlrdatacontroldeviceintegration.h  wlrdatacontrolmanagerintegration.cpp  wlrdatacontrolmanagerintegration.h  wlrdatacontrolofferintegration.cpp  wlrdatacontrolofferintegration.h  wlrdatacontrolsourceintegration.cpp  wlrdatacontrolsourceintegration.h
dde-clipboard/dbus/: clipboardloaderinterface.h  dbusdockinterface.h  iteminfo.h
dde-clipboard/displaymanager/: displaymanager.cpp  displaymanager.h
dde-clipboard/dsg/: org.deepin.dde.clipboard.json
dde-clipboard/dsg/built-in-icons/: dialog-ok.dci  none.dci
dde-clipboard/translations/: dde-clipboard_ca.ts  dde-clipboard_cs.ts  dde-clipboard_de.ts  dde-clipboard_en_GB.ts  dde-clipboard_es.ts  dde-clipboard_fr.ts  dde-clipboard_gl_ES.ts  dde-clipboard_id.ts  dde-clipboard_it.ts  dde-clipboard_lt.ts  dde-clipboard_ms.ts  dde-clipboard_nl.ts  dde-clipboard_pl.ts  dde-clipboard_sk.ts  dde-clipboard_sr.ts  dde-clipboard_tr.ts  dde-clipboard_ug.ts  dde-clipboard_uk.ts  dde-clipboard_vi.ts  dde-clipboard_zh_CN.ts  dde-clipboard_zh_TW.ts
dde-clipboardloader/: clipboardloader.cpp  clipboardloader.h  dde-clipboardloader.pro  main.cpp  src.pri  waylandcopyclient.cpp  waylandcopyclient.h
debian/: changelog  control  copyright  dde-clipboard.conffiles  rules
dock-clipboard-plugin/: clipboardcontroller.h  clipboarditem.cpp  clipboardplugin.cpp
misc/: com.deepin.dde.Clipboard.service  dde-clipboard-daemon.desktop  dde-clipboard-daemon.service  dde-clipboard-daemon.service.in  dde-clipboard.desktop  dde-clipboard.desktop.in  dde-clipboard.service.in  org.deepin.dde.Clipboard1.service
rpm/: dde-clipboard.spec
src/dde-clipboard/: CMakeLists.txt  com.deepin.dde.Clipboard.xml  constants.h  itemdata.cpp  itemwidget.cpp  itemwidget.h  listview.cpp  mainwindow.cpp  mainwindow.h  pixmaplabel.cpp  pixmaplabel.h
src/dde-clipboard-daemon/: CMakeLists.txt  clipboardloader.h  main.cpp  readpipedatatask.h  waylandcopyclient.cpp  waylandcopyclient.h
src/dde-clipboard/dbus/: clipboardloaderinterface.cpp
tests/: CMakeLists.txt  kf5_wayland_test.cc  test-recoverage.sh
tests/dde-clipboard/: CMakeLists.txt  ut_constants.cpp  ut_dde-clipboard.pro  ut_iconbutton.cpp  ut_itemdata.cpp  ut_iteminfo.cpp  ut_itemwidget.cpp  ut_listview.cpp  ut_main.cpp  ut_mainwindow.cpp  ut_pixmaplabel.cpp  ut_refreshtimer.cpp
tests/dde-clipboard-daemon/: CMakeLists.txt  ut_main.cpp  ut_waylandcopyclient.cpp
tests/dde-clipboard-daemon/plugin/dde-clipboard-loader/: ut_clipboardloader.cpp  ut_main.cpp
translations/: dde-clipboard.ts  dde-clipboard_af.ts  dde-clipboard_ak.ts  dde-clipboard_am_ET.ts  dde-clipboard_ar.ts  dde-clipboard_ast.ts  dde-clipboard_az.ts  dde-clipboard_bg.ts  dde-clipboard_bn.ts  dde-clipboard_bo.ts  dde-clipboard_br.ts  dde-clipboard_ca.ts  dde-clipboard_cs.ts  dde-clipboard_da.ts  dde-clipboard_de.ts  dde-clipboard_de_DE.ts  dde-clipboard_el.ts  dde-clipboard_el_GR.ts  dde-clipboard_en_AU.ts  dde-clipboard_en_GB.ts  dde-clipboard_en_US.ts  dde-clipboard_eo.ts  dde-clipboard_es.ts  dde-clipboard_es_419.ts  dde-clipboard_et.ts  dde-clipboard_fa.ts  dde-clipboard_fi.ts  dde-clipboard_fr.ts  dde-clipboard_gl_ES.ts  dde-clipboard_he.ts  dde-clipboard_hi.ts  dde-clipboard_hi_IN.ts  dde-clipboard_hr.ts  dde-clipboard_hu.ts  dde-clipboard_hy.ts  dde-clipboard_id.ts  dde-clipboard_it.ts  dde-clipboard_ja.ts  dde-clipboard_ka.ts  dde-clipboard_kab.ts  (+36 more)
(+32 files in other folders)
